--- a/testmvc/Web.config
+++ b/testmvc/Web.config
@@ -12,34 +12,18 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-testmvc-20140402122759;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-testmvc-20140402122759.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DefaultCulture" value="ru" />
-  </appSettings>
+  
+  <appSettings configSource="appsettings.config" />
 
-  <log4net>
-    <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="log.txt" />
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
-      <staticLogFileName value="true" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date %level %logger - %message %exception%n%n" />
-      </layout>
-    </appender>
-    <root>
-      <level value="ALL" />
-      <appender-ref ref="RollingFileAppender" />
-    </root>
-  </log4net>
+  <log4net configSource="log4net.config" />
   
   <system.web>
+
+    <customErrors mode="On" defaultRedirect="~/error">
+      <error redirect="~/error/notfound" statusCode="404" />
+      <error redirect="~/error" statusCode="500" />
+    </customErrors>
+    
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
