some unit testing

--- a/UnitTesting/app.config
+++ b/UnitTesting/app.config
@@ -28,4 +28,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=..\testmvc\App_Data;Integrated Security=SSPI;AttachDBFilename=\aspnet-testmvc-20140402122759.mdf" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
