--- a/testmvc/packages.config
+++ b/testmvc/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="3.3.1" targetFramework="net45" />
+  <package id="Autofac" version="3.4.0" targetFramework="net45" />
+  <package id="Autofac.Mvc4" version="3.1.0" targetFramework="net45" />
+  <package id="Autofac.WebApi2" version="3.3.0" targetFramework="net45" />
   <package id="AutoMapper" version="3.1.1" targetFramework="net45" />
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net45" />
@@ -19,11 +21,11 @@
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="4.0.30506.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.30506" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net45" />
