index page updated, orderinglink extension added

--- a/testmvc/testmvc.csproj
+++ b/testmvc/testmvc.csproj
@@ -221,6 +221,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CultureHelper.cs" />
+    <Compile Include="Helpers\OrderingLinkExtension.cs" />
     <Compile Include="Models\EditUserViewModel.cs" />
     <Compile Include="Models\LoginUserViewModel.cs" />
     <Compile Include="Models\RegisterUserViewModel.cs" />
