--- a/testmvc/Web.config
+++ b/testmvc/Web.config
@@ -35,6 +35,16 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <caching>
+      <sqlCacheDependency enabled="true">
+        <databases>
+          <add
+          name="Default"
+          connectionStringName="DefaultConnection"
+          pollTime="2000"/>
+        </databases>
+      </sqlCacheDependency>
+    </caching>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
